--- a/HTML/boards.html
+++ b/HTML/boards.html
@@ -3,19 +3,19 @@
 <!DOCTYPE html>
 <!-- He next HTML tag whe need to include is the html tag; attribute of lang is language and the value is en for English -->
 <html lang="en">
-<!-- This is the place where I add all of my meta and link tages things that the website need to but not the viewer of the web page -->
+<!-- This is the place where I add all of my meta and link tag things that the website need to but not the viewer of the web page -->
 
 <head>
-    <!-- this meat tage let the website know that any character from all langang can be made. -->
+    <!-- This meta tag lets the website know that any character from all languages can be used. -->
     <meta charset="UTF-8">
-    <!-- This meta tag make sure that the page doesn't look weird on any devie that you may use. -->
+    <!-- This meta tag make sure that the page doesn't look weird on any device that you may use. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- this is the title of the page that the viewer will see -->
     <title> Happy Coding </title>
     <!-- this is the way to link you website as a external sheet -->
     <link href="../CSS/style.css" rel="stylesheet">
 
-    <!-- This is the end of the head tage  -->
+    <!-- This is the end of the head tag  -->
 </head>
 <!-- I the body is the only place where people/ viewer can see you code. This is where we are going to have all of the content in the website.-->
 
@@ -27,10 +27,10 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../HTML/index.html">Home</a><br />
-            <a href="../HTML/boards.html">Boards</a><br />
-            <a href="../HTML/game.html">Game</a><br />
-            <a href="../HTML/strings.html"> Secret Message</a><br>
+            <a href="../index.html">Home</a><br />
+            <a href="./boards.html">Boards</a><br />
+            <a href="./game.html">Game</a><br />
+            <a href="./strings.html"> Secret Message</a><br>
             <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
           </nav>
     </header>
