--- a/HTML/game.html
+++ b/HTML/game.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <!-- container for introductory content or a set of navigational links.-->
-    <header>
-      <!-- this is a heading tag that goes from h1- h6 -->
-      <h1>Welcome to my game</h1>
-      <!-- This is a navigation tag that a way to navigate through a website. -->
-      <nav>
-        <h2>Navigation</h2>
-        <a href="../HTML/index.html">Home</a><br />
-        <a href="../HTML/boards.html">Boards</a><br />
-        <a href="../HTML/game.html">Game</a><br />
-        <a href="../HTML/strings.html"> Secret Message</a><br>
-        <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
-      </nav>
+   <header>
+    <!-- This is a heading tag that goes from h1- h6 -->
+    <h1>  Welcome to Game </h1>
+        <!-- This is a navigation tag that a way to navigate through a website. -->
+        <nav>
+          <h2>Navigation</h2>
+          <a href="../index.html">Home</a><br />
+          <a href="./boards.html">Boards</a><br />
+          <a href="./game.html">Game</a><br />
+          <a href="./strings.html"> Secret Message</a><br>
+          <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
+        </nav>
     </header>
     
 
@@ -56,7 +56,7 @@
         Tempe, AZ 85283 <br>
     </footer>
 
-    <script src="../ JS/game.js"></script>
+    <script src="../JS/game.js"></script>
 
 
   </body>
