--- a/HTML/table.html
+++ b/HTML/table.html
@@ -16,12 +16,13 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../HTML/index.html">Home</a><br />
-            <a href="../HTML/boards.html">Boards</a><br />
-            <a href="../HTML/game.html">Game</a><br />
-            <a href="../HTML/strings.html"> Secret Message</a><br>
+            <a href="../index.html">Home</a><br />
+            <a href="./boards.html">Boards</a><br />
+            <a href="./game.html">Game</a><br />
+            <a href="./strings.html"> Secret Message</a><br>
             <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
         </nav>
+
     </header>
 
     <p>
