--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- this is the title of the page that the viewer will see -->
     <title>CSC102 Home Page</title>
     <!-- This is the way to add a link you external style sheet so that you can add styling to your web page -->
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet">
     <!-- This is the end of the head tag  -->
 </head>
 <!-- I the body is the only place where people/ viewer can see you code. This is where we are going to have all of the content in the website.-->
@@ -26,11 +26,11 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../HTML/index.html">Home</a><br />
-            <a href="../HTML/boards.html">Boards</a><br />
-            <a href="../HTML/game.html">Game</a><br />
-            <a href="../HTML/strings.html"> Secret Message</a><br>
-            <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
+            <a href="./index.html">Home</a><br />
+            <a href="./HTML/boards.html">Boards</a><br />
+            <a href="./HTML/game.html">Game</a><br />
+            <a href="./HTML/strings.html"> Secret Message</a><br>
+            <a href="./guessingGame/guessingGame.html"> Guessing Game</a><br>
         </nav>
     </header>
     <!-- this is a paragraph tag that is used to give information to the viewer of the website -->
@@ -51,7 +51,7 @@
 
     </div>
     <!-- this is the way that we would popular a image tag. Also, i have added a class attribute inside the element -->
-    <img src="../meme.webp" alt="memes" class="memeImage" id="memeImage" style="position: relative;" />
+    <img src="./meme.webp" alt="memes" class="memeImage" id="memeImage" style="position: relative;" />
 
 
     <!-- This is a navigation of footer that holds all of my navigation tags what we call a web map on a website -->
@@ -76,7 +76,7 @@
         2625 W Baseline Rd,
         Tempe, AZ 85283
     </footer>
-    <script src="../ JS/moveImage.js"></script>
+    <script src="./JS/moveImage.js"></script>
 </body>
 
 </html>
