--- a/HTML/boards.html
+++ b/HTML/boards.html
@@ -23,11 +23,12 @@
 <!-- container for introductory content or a set of navigational links.-->
   <header>
     <!-- This is a heading tag that goes from h1- h6 -->
-    <h1> AI  Objectives</h1>
+    <h1> AI  Objectives </h1>
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../index.html">Home</a><br />
+            <a href="../index.html">Home</a> <br />
+            <a href="../meme.html">Meme</a><br />
             <a href="./boards.html">Boards</a><br />
             <a href="./game.html">Game</a><br />
             <a href="./strings.html"> Secret Message</a><br>
