--- a/HTML/strings.html
+++ b/HTML/strings.html
@@ -26,7 +26,7 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../index.html">Home</a><br />
+            <a href="../meme.html">Meme</a><br />
             <a href="./boards.html">Boards</a><br />
             <a href="./game.html">Game</a><br />
             <a href="./strings.html"> Secret Message</a><br>
