--- a/guessingGame/guessingGame.html
+++ b/guessingGame/guessingGame.html
@@ -16,7 +16,7 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="../HTML/index.html">Home</a><br />
+            <a href="../index.html">Home</a><br />
             <a href="../HTML/boards.html">Boards</a><br />
             <a href="../HTML/game.html">Game</a><br />
             <a href="../HTML/strings.html"> Secret Message</a><br>
