Updated a few thing

--- a/guessingGame/guessingGame.html
+++ b/guessingGame/guessingGame.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess Game</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../CSS/style.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
         <nav>
             <h2>Navigation</h2>
             <a href="../index.html">Home</a><br />
+            <a href="../meme.html">Meme</a><br /> 
             <a href="../HTML/boards.html">Boards</a><br />
-            <a href="../HTML/game.html">Game</a><br />
-            <a href="../HTML/strings.html"> Secret Message</a><br>
-            <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
+            <a href="../HTML/game.html"> RPS</a><br />
+            <a href="../HTML/strings.html"> Secret Message </a><br>
         </nav>
     </header>
     <h2> Guess How Many Jelly Beans Are in the JellyBeans</h2>
