--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="./home.css" </head>
+    <link rel="stylesheet" href="./home.css" />
 
 <body>
     <header>
@@ -15,11 +15,10 @@
         <h1> Welcome to the future </h1>
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
-            <h2>Navigation</h2>
-            <a href="./index.html">Home</a><br />
+            <h2>Navigation</h2> <br />
             <a href="./meme.html">Meme</a><br />
             <a href="./HTML/boards.html">Boards</a><br />
-            <a href="./HTML/game.html">Game</a><br />
+            <a href="./HTML/game.html">RPS</a><br />
             <a href="./HTML/strings.html"> Secret Message</a><br>
             <a href="./guessingGame/guessingGame.html"> Guessing Game</a><br>
         </nav>
