--- a/meme.html
+++ b/meme.html
@@ -13,7 +13,7 @@
     <!-- this is the title of the page that the viewer will see -->
     <title>CSC102 Home Page</title>
     <!-- This is the way to add a link you external style sheet so that you can add styling to your web page -->
-    <link href="./CSS/style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet"/>
     <!-- This is the end of the head tag  -->
 </head>
 <!-- I the body is the only place where people/ viewer can see you code. This is where we are going to have all of the content in the website.-->
@@ -26,10 +26,9 @@
         <!-- This is a navigation tag that a way to navigate through a website. -->
         <nav>
             <h2>Navigation</h2>
-            <a href="./index.html">Home</a> <br />
-            <a href="./meme.html">Meme</a><br />    
+            <a href="./index.html">Home</a> <br /> 
             <a href="./HTML/boards.html">Boards</a><br />
-            <a href="./HTML/game.html">Game</a><br />
+            <a href="./HTML/game.html">RPS</a><br />
             <a href="./HTML/strings.html"> Secret Message</a><br>
             <a href="./guessingGame/guessingGame.html"> Guessing Game</a><br>
         </nav>
