--- a/HTML/boards.html
+++ b/HTML/boards.html
@@ -13,7 +13,7 @@
     <!-- this is the title of the page that the viewer will see -->
     <title> Happy Coding </title>
     <!-- this is the way to link you website as a external sheet -->
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../CSS/style.css" rel="stylesheet"/>
 
     <!-- This is the end of the head tag  -->
 </head>
@@ -29,8 +29,7 @@
             <h2>Navigation</h2>
             <a href="../index.html">Home</a> <br />
             <a href="../meme.html">Meme</a><br />
-            <a href="./boards.html">Boards</a><br />
-            <a href="./game.html">Game</a><br />
+            <a href="./game.html">RPS</a><br />
             <a href="./strings.html"> Secret Message</a><br>
             <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
           </nav>
