--- a/HTML/strings.html
+++ b/HTML/strings.html
@@ -13,7 +13,7 @@
     <!-- this is the title of the page that the viewer will see -->
     <title> Secret Message</title>
     <!-- This is the way to add a link you external style sheet so that you can add styling to your web page -->
-    <link href="../CSS/smessage-style.css" rel="stylesheet">
+    <link href="../CSS/smessage-style.css" rel="stylesheet"/>
     <!-- This is the end of the head tag  -->
 </head>
 <!-- I the body is the only place where people/ viewer can see you code. This is where we are going to have all of the content in the website.-->
@@ -29,8 +29,7 @@
             <a href="../index.html"> Home</a><br/>
             <a href="../meme.html">Meme</a><br />
             <a href="./boards.html">Boards</a><br />
-            <a href="./game.html">Game</a><br />
-            <a href="./strings.html"> Secret Message</a><br>
+            <a href="./game.html">RPS</a><br />
             <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
         </nav>
     </header>
@@ -73,7 +72,8 @@
     <input type="text" id="palindrome" name="palindrome"/>
     <button onclick="checkPalindrome()">Check</button>
     <p id="result"></p> -->
-   <div id="result"></div>
+   <div id="pResult"></div>
+   <div id="sResult"></div>
     
 
     <footer>
