--- a/HTML/table.html
+++ b/HTML/table.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Creation</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../CSS/style.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -18,9 +18,9 @@
             <h2>Navigation</h2>
             <a href="../meme.html">Meme</a><br />
             <a href="./boards.html">Boards</a><br />
-            <a href="./game.html">Game</a><br />
-            <a href="./strings.html"> Secret Message</a><br>
-            <a href="../guessingGame/guessingGame.html"> Guessing Game</a><br>
+            <a href="./game.html">RPS</a><br />
+            <a href="./strings.html">Secret Message</a><br>
+            <a href="../guessingGame/guessingGame.html">Guessing Game</a><br>
         </nav>
 
     </header>
